# VoxelGameNext

./: .gitignore  CMakeLists.txt  FileList.txt  README.md  vcpkg.json
Assets/Models/: powerful.mtl  standing pistol.mtl
Assets/Shaders/: directional_shadow_map (vert).glsl  fragmentShader.glsl  omni_shadow_map (frag).glsl  omni_shadow_map (geom).glsl  omni_shadow_map (vert).glsl  skybox (frag).glsl  skybox (vert).glsl  vertexShader.glsl
Assets/Textures/: blocks.xcf
Client/: CMakeLists.txt  Main.cpp
Client/Render/: RenderSystem.hpp
Engine/: CMakeLists.txt
Engine/Core/: Common.hpp
Engine/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  OmniShadowMap.cpp  OmniShadowMap.h  PointLight.cpp  PointLight.h  ShadowMap.cpp  ShadowMap.h  SpotLight.cpp  SpotLight.h
Engine/Platform/: Window.cpp  Window.hpp
Engine/Render/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Game/: CMakeLists.txt
Game/Core/: Hash.hpp
Game/Systems/: WorldSerializer.cpp  WorldSerializer.hpp  WorldSystem.cpp  WorldSystem.hpp
Game/Voxel/: BlockTypes.hpp  Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp
Server/: CMakeLists.txt  Main.cpp
